wedding-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding-invitation-deployment
  namespace: wedding-invitation
spec:
  replicas: 2
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: wedding-invitation
  template:
    metadata:
      labels:
        app: wedding-invitation
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: wedding-invitation
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: wedding-invitation-container
          image: montkim9/invi2:49b4cf
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "2"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 1

          ports:
            - containerPort: 3000
